--- a/src/styles.css
+++ b/src/styles.css
@@ -210,7 +210,7 @@ select {
     background-color: #a52a2a; /* Cambia el color de fondo al pasar el ratón */
 }
 
-#Resultado {
+#resultContainer {
     display: none;
     background-color: #23a3ca; /* Cambia el color de fondo al pasar el ratón */
 
@@ -222,4 +222,102 @@ select {
 
 #Form-Factura{
     display: none;
+}
+
+#Form-Factura .row {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    width: 100%;
+    margin-bottom: 2vh;
+}
+
+#Form-Factura p {
+    font-size: 2em;
+    font-weight: bold;
+    margin-bottom: 0;
+}
+
+#label-tarifa {
+    width: 75vw;
+    height: 8vh;
+    font-size: 1.5em;
+    font-weight: bold;
+    margin-bottom: 0;
+    align-items: center;
+
+}
+
+#Form-Factura .row button {
+    width: 75vw;
+    height: 6vh;
+    font-size: 1.5em;
+    font-weight: bold;
+}
+
+.row > .tileInputs label {
+    font-size: 2em;
+    font-weight: bold;
+    margin-bottom: 0;
+    align-items: center;
+}
+
+.row > .tileInputs {
+    font-weight: bold;
+    margin-bottom: 0;
+    align-items: center;
+    height: 8vh;
+}
+
+#calcTarifa {
+    height: 8vh;
+    align-self: center;
+}
+
+/* Switch */
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 60px;
+    height: 34px;
+}
+
+.switch input {display:none;}
+
+.slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    -webkit-transition: .4s;
+    transition: .4s;
+    }
+
+.slider:before {
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+
+input:checked + .slider {
+    background-color: #2196F3;
+}
+
+input:focus + .slider {
+    box-shadow: 0 0 1px #2196F3;    
+}
+
+input:checked + .slider:before {
+    -webkit-transform: translateX(26px);
+    -ms-transform: translateX(26px);
+    transform: translateX(26px);
 }
