--- a/src/styles.css
+++ b/src/styles.css
@@ -5,12 +5,13 @@
     --gradient-bottom: #2e2c36;
     --background-title-color: rgb(255, 255, 255);
     --title-color: #ffffff;
-    --color-button-header: rgb(64, 22, 141);
-    --color-button-header-hover: rgb(106, 59, 194);
+    --color-button-header: rgb(61, 56, 66);
+    --color-button-header-hover: rgb(92, 91, 95);
 }
 
 body {
     font-family: 'Arial', sans-serif;
+    color: white;
     margin: 0;
     padding: 0;
     height: 100vh;
@@ -33,7 +34,7 @@ header {
 
 .header-button {
     margin: 0;
-    font-size: 4em;
+    font-size: 3em;
     font-weight: bold;
     color: var(--title-color);
     text-align: center;
@@ -45,16 +46,11 @@ header {
 }
 
 .header-button:hover {
-    margin: 0;
-    font-size: 4em;
-    font-weight: bold;
-    color: var(--title-color);
-    text-align: center;
-    width: 49.8%;
-    height: 100%;
     background-color: var(--color-button-header-hover);
-    margin-right: auto;
-    border: none;
+}
+
+.header-button.active{
+    background-color: #080a49;
 }
 
 .space {
@@ -83,26 +79,27 @@ form {
     flex-direction: row;
     justify-content: center;
     width: 100%;
-    margin-bottom: 2vh;
+    height: 12vh;
+    margin-bottom: 4vh;
 }
 
 #hideableArea{
     display: flex;
     flex-direction: column;
-    max-width: 100%;
+    width: 100%;
     transition: max-height 0.3s ease;
 }
 
-#hideableArea label:first-child {
+/*#hideableArea label:first-child {
     width: 20vw;
     font-size: 1.8em;
-}
+}*/
 
 .tileInputs {
     display: flex;
     flex-direction: column;
     margin-left: 5vw;
-    margin-bottom: 2vh;
+    margin-bottom: 5vh;
     width: 40%; /* Ancho del 45% para dejar espacio para el margen */
     max-width: 40vw; /* Ancho máximo para evitar que los elementos sean demasiado anchos */
     margin-right: 5%; /* Margen derecho entre las columnas */
@@ -114,7 +111,7 @@ form {
     align-items: center;
     margin-left: 5vw;
     margin-bottom: 2vh;
-    width: 100vw; /* Ancho del 45% para dejar espacio para el margen */
+    width: 90vw; /* Ancho del 45% para dejar espacio para el margen */
     max-width: 90vw; /* Ancho máximo para evitar que los elementos sean demasiado anchos */
     margin-right: 5%; /* Margen derecho entre las columnas */
     height: 8vh;
@@ -124,13 +121,13 @@ form {
     display: flex;
     width: 90%;
     height: 75%;
-    font-size: 2.5vh;
+    font-size: 2.0 vh;
     font-weight: bold;
 }
 
 .main-button {
     display: flex;
-    height: 100%;
+    /*height: 100%;*/
     font-size: 3em;
     border-radius: 15px; 
 }
@@ -148,20 +145,27 @@ input:hover {
     background: #f2f2f2; 
 }
 
+ul{
+    width: 45%;
+}
+
 li {
     display: flex;
+    width: 100;
     list-style: none;
     font-size: 3em;
     font-weight: bold;
     margin: 20px;
-
+    border: white;
     /*prueba de antonetiiii*/
     position:relative;
+    background: #889ca5;
+    border-radius: 15px;
 }
 li:nth-child(odd) {
-    background: #dae9f0;
+    
 }
-
+    
 #Añadir, #Calcular {
     width: 100%;
     height: 100%;
@@ -179,6 +183,31 @@ li:nth-child(odd) {
 .tileInputs #Añadir {
     text-align: center;
     justify-content: center;
+}
+
+.appliance {
+    display: flex;
+    flex-direction: row;
+    justify-content: right;
+}
+
+.appliance * {
+    display: flex;
+    width: 100%;
+    height: 100%;
+    font-size: 2.0 vh;
+    font-weight: bold;
+    margin-left: 5vw;
+    margin-right: 5vw;
+}
+
+.appliance button {
+    font-size: 1em;
+    width: 15%;
+    height: 100%;
+    border-radius: 100px;
+    align-items: right;
+    margin-left: auto;
 }
 
 #Añadir:hover, #Calcular:hover {
@@ -220,12 +249,13 @@ select {
 #resultContainer {
     display: none;
     
-    background-color: #23a3ca; /* Cambia el color de fondo al pasar el ratón */
+    background-color: #3e3854; /* Cambia el color de fondo al pasar el ratón */
 
-}
+    border-radius: 5px;
 
-.active{
-    background-color: #080a49;
+    margin: 10px 20px;
+    
+    font-size: 1.5em;
 }
 
 #Form-Factura{
@@ -256,6 +286,11 @@ select {
 
 }
 
+.discrimination-button.active{
+    background-color: rgb(131, 110, 110);
+    font-weight: bold;
+}
+
 #Form-Factura .row button {
     width: 75vw;
     height: 6vh;
@@ -278,9 +313,14 @@ select {
     height: 8vh;
 }
 
+
 #calcTarifa {
-    height: 8vh;
-    align-self: center;
+    width: 100%;
+    height: 100%;
+    font-size: 3em;
+    background: #ffffff;
+    align-content: center;
+    justify-content: center;
 }
 
 /* Switch */
@@ -329,4 +369,17 @@ input:checked + .slider:before {
     -webkit-transform: translateX(26px);
     -ms-transform: translateX(26px);
     transform: translateX(26px);
+}
+
+#resultContainerTarifa {
+    display: none;
+    
+    background-color: #3e3854; /* Cambia el color de fondo al pasar el ratón */
+
+    border-radius: 5px;
+
+    margin: 10px 20px;
+    
+    font-size: 1.5em;
+
 }
