--- a/src/styles.css
+++ b/src/styles.css
@@ -389,6 +389,10 @@ input:checked + .slider:before {
     transform: translateX(26px);
 }
 
+#listaTarifas{
+    
+}
+
 #resultContainerTarifa {
     display: none;
     
